--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "scripts": {"build": "node --max-old-space-size=2048 node_modules/.bin/react-scripts build"},
+    "build": "node --max-old-space-size=2048 node_modules/.bin/react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
