--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "node --max-old-space-size=2048 node_modules/.bin/react-scripts build",
-    "test": "node --max-old-space-size=2048 node_modules/.bin/react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
-  
   "eslintConfig": {
     "extends": [
       "react-app",
