--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node --max-old-space-size=2048 node_modules/.bin/react-scripts start",
+    "start": "react-scripts start",
     "build": "node --max-old-space-size=2048 node_modules/.bin/react-scripts build",
-    "test": "react-scripts test",
+    "test": "node --max-old-space-size=2048 node_modules/.bin/react-scripts build",
     "eject": "react-scripts eject"
   },
 
