--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "install:server": "cd server && npm install",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "client": "cd client && npm start",
-    "server": "cd server && node index.js"
+    "server": "cd server && node index.js",
+    "start": "cd server && npm install && node index.js"
   },
   "keywords": [],
   "author": "",
