before refactor indicatorlist/data

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,5 @@
+#  npm start (dev mode) - react should automatically know whether to use development or production
+# local dev port React runs on
 PORT=3001
+# tells React where to find local backend API
+REACT_APP_API_URL=http://localhost:5001
